# multi-agent-chat

./: README.md  docker-compose.yml
apps/api/: .env  Cargo.toml
apps/api/src/: main.rs
apps/api/src/domain/model/: message.rs
apps/api/src/infrastructure/: llm_client.rs
apps/api/src/presentation/: handler.rs
apps/api/src/presentation/handler/: create_message_handler.rs  create_thread_handler.rs  get_message_handler.rs  healthcheck_handler.rs  responses_handler.rs  run_thread_handler.rs  subscribe_thread_handler.rs
docker/: flyway.Dockerfile
flyway/sql/postgres/: U0__create_thread_database.sql  V0__create_thread_database.sql
flyway/sql/thread/: V0__create_threads_table.sql  V1__create_messages_table.sql
